# CPSC312-assignment2

./: LICENSE  a2.cabal  cabal.config
src/: a2.hs
