name:                a2
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/wolf-tickets/a2#readme
license:             BSD3
license-file:        LICENSE
author:              Al Smith
maintainer:          alexgwsmith@gmail.com
copyright:           2018 Al Smith
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable a2
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
